@@ -1,5 +1,4 @@
-Version 10.4.137 - 21 June 2007, by Pascal "Pixel" Rigaux
-
+- use modularized ide drivers and configure ide-controller in modprobe.conf
 - auto_install:
   o allow "automatic=met:http,ser:server,dir:/pub/dir
     kickstart=/pub/auto_inst.cfg" to get http://server/pub/auto_inst.cfg (#31474)
