@@ -1,5 +1,8 @@
 - merge "ide" and "all_ide" categories since we now use fully
-  modularezed ide drivers
+  modularized ide drivers
+- bootloader-config: 
+  o configure ide-controller in modprobe.conf for upgrading to kernels 
+    with modularized ide drivers
 
 Version 10.4.139 -  27 June 2007, by Thierry Vignaud
 
